# -ComfyUI-MegaWarp

./: __init__.py  pyproject.toml  requirements.txt
js/: megawarp_appearance.js
nodes/: __init__.py  flow_blend.py  flow_condition_warp.py  flow_consistency.py  flow_estimate.py  flow_noise_warp.py  flow_to_mask.py  flow_visualize.py  flow_warp.py  latent_warp.py  model_loader.py  point_tracker.py
utils/: __init__.py  tensor_utils.py  warp_ops.py
workflows/: megawarp_advanced.json  megawarp_autoqueue_loop.json  megawarp_basic.json  megawarp_controlnet.json  megawarp_img2img.json  megawarp_latent.json
